apps/downloads/sonarr/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: &port 8989
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyseerr
      ports:
        - port: *port
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
      ports:
        - port: *port
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: 9696
          protocol: TCP
